project-code/css/home.css
/* SECTION 1: FRONT PAGE */

#dynamic-main{
    margin-top: 8%;
}
/*#main {
    position: relative;
    display: flex;
    height: 800px;
    margin-top: 8%;
    background-image: url(/assets/imageedit_1_4705680061.png);
    background-size:cover;
} */

/*
#main::before{
    content: "";
    background-image: url(/assets/IMG_9900.JPG);
    background-size:cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 0.5;
} */

 #main-title {
    position: relative;
    flex-basis: 100%;
    align-self: center;
    font-size: 100px;
    color: rgb(255, 255, 255); 
    text-shadow: 3px 3px #2a2828;
} 

#main-worship{
    padding: 3%;
    background-color: #2a2828ac;
}

#main-verse{
    padding: 3%;
    background-color: #2a28289e;
}

/* SECTION 2: INFO */

#info {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 5%;
    margin-bottom: 5%;
    padding-left: 10%;
    padding-right: 10%;
}

#info-description{
    flex-basis: 40%;
}

#info-description > h1{
    text-align: left;
    text-transform: uppercase;
}

#info-description > h2{
    text-align: left;
    color:#4f4747;
}

#info-description > p{
    font-size: 20px;
    color:#4f4747;
}


#service{
    outline: thick double #777764;
    padding-right: 2%;
    padding-left: 2%;
}

#info-about {
    padding-top: 5%;
    font-family: dm-medium;
    font-size: 22px;
    text-align: left;
    margin: 2%;
    color:#4f4747
}

#info-about-service {
    font-family: dm-medium;
    font-size: 22px;
    padding-bottom: 5%;
    margin: 2%;
    color: #4f4747;
}

#info-button{
    margin-top: 5%;
    background-color: #4f4747;
}
#info-picture{
    flex-basis: 50%;
    align-self: center;
}

#info-img{
    width: 100%;
}

  /* SECTION 3: VERSE AND PICTURES*/

#verse-picture{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-top: 5%;
    margin-bottom: 5%;
}

#verse-picture > p{
    text-align: center;
}

#cards{
    display:flex;
    flex-direction: row;
    justify-content: space-around;
    padding-top: 5%;
    padding-bottom: 5%;
}

.card {
    flex-basis: 30%;
    position: relative;
    border-radius: 5%;
  }
  .material-icons {
    color:#777764;
}

.card .card-image {
    border-radius: 5% 5% 0px 0px;
}
.card .card-reveal{
    padding: 0px;
    padding-left: 5%;
    padding-right: 5%;
    width: 100%;
    height: 100%;
}

.card .card-reveal .card-title {
    padding-top : 5%;
}
.card .card-content {
    padding: 5%;
}

.card .card-content .card-title {
    color:#4f4747 !important;
}

.card-content > p{
    font-size: 22px;
    text-transform: lowercase;
}
.card-content > p > a{
    font-size: 18px;
    font-family: dm-italic;
    color: #777764;
}

.card-content > p > a:hover{
    background-color: gray;
}
.carousel .carousel-item {
    background-color: #777764 !important;
    padding-left: 20%;
    padding-right: 20%;
}

#carousel-info{
    width: 100%;
    position: relative;
  }
  
  .left-icon,
  .right-icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 100px; /* Adjust icon size as needed */
    cursor: pointer; /* Add pointer cursor for interaction */
  }
  
.left-icon {
left: 30px; /* Adjust left positioning as needed */
z-index: 3;
color: white;
background-color: #777764;
}

.right-icon {
right: 30px; /* Adjust right positioning as needed */
color: rgb(255, 255, 255);
background-color: #777764;
}

.carousel-item > h2{
    font-family: dm-bold;
    font-size: 20px;
    text-transform: uppercase;
    color: white;
}
.carousel-item > h3{
    font-family: dm-medium;
    font-size: 16px;
    text-transform: uppercase;
    color:white;
}
.carousel.carousel-slider .carousel-item p{
    font-family: dm-reg;
    font-size: 14px;
    color:white;
}
.special-list{
    display: flex;
    flex-direction: column;

}

.carousel-item > ul{
    font-family: dm-reg;
    font-size: 12px;
    color:white;
    text-align: center;
}
.title-semicolon {
    font-family: dm-bold;
    font-size: 14px;
}

#add-info {
    margin-top: 16%;
}

